pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: darkhttpd
  labels:
    run: darkhttpd
spec:
  containers:
    - image: alpinelinux/darkhttpd
      imagePullPolicy: Always
      name: darkhttpd
      ports:
        - containerPort: 8080
          protocol: TCP
