service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: darkhttpd
  name: darkhttpd
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: darkhttpd
  sessionAffinity: None
  type: ClusterIP
